--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -2,14 +2,13 @@
         xmlns:modernControls="clr-namespace:ModernControls;assembly=ModernControls"                        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:Q_Determinant"
-        WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024">
-    <modernControls:MWindow.Resources>
-        <CollectionViewSource x:Key="Tabs"/>
-    </modernControls:MWindow.Resources>
-    <modernControls:Workplace />
+        WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024" >
     
-    <!--<DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Hidden">
+    <modernControls:Workplace  Margin="1"/>
+
+    <!--<modernControls:MWindow.Resources>
+        <CollectionViewSource x:Key="Tabs"/>
+    </modernControls:MWindow.Resources><DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Hidden">
     <Menu DockPanel.Dock="Top" IsMainMenu="True" x:Name="MainMenu">
                             <MenuItem Header="FILE">
                                 <MenuItem Header="New">
