--- a/ModernControls/Themes/ExtendedTreeViewStyle.xaml
+++ b/ModernControls/Themes/ExtendedTreeViewStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ModernControls">
+                    xmlns:local="clr-namespace:ModernControls"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/MTitleBarButtonStyle.xaml" />
@@ -77,7 +78,6 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-
     <Style x:Key="ExpandCollapseToggleStyle"
        TargetType="ToggleButton">
         <Setter Property="Focusable"
@@ -132,34 +132,20 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="TreeViewItemFocusVisual">
-        <Setter Property="Control.Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Border>
-                        <Rectangle Margin="0,0,0,0"
-                     StrokeThickness="5"
-                     Stroke="Black"
-                     StrokeDashArray="1 2"
-                     Opacity="0" />
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
 
-    <Style TargetType="{x:Type TreeViewItem}">
-        <Setter Property="SnapsToDevicePixels" Value="true" />
-        <Setter Property="Foreground" Value="{StaticResource BasicFontColorBrush}"/>
-        <Setter Property="Background" Value="{StaticResource BackgroundColorBrush}"/>
-        <Setter Property="IsExpanded" Value="True"/>
+    <Style TargetType="{x:Type local:ExtendedTreeViewItem}">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="HorizontalContentAlignment" Value="Left" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Padding" Value="1,0,0,0" />
+        <Setter Property="Foreground" Value="{StaticResource BasicFontColorBrush}" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TreeViewItem}">
-                    <Grid>
+                <ControlTemplate TargetType="{x:Type local:ExtendedTreeViewItem}">
+                    <Grid x:Name="Item">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition MinWidth="19"
-                              Width="Auto" />
+                            <ColumnDefinition MinWidth="19" Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
@@ -168,15 +154,15 @@
                             <RowDefinition />
                         </Grid.RowDefinitions>
                         <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup x:Name="SelectionStates">
-                                <VisualState x:Name="Selected">
+                            <!--<VisualStateGroup x:Name="SelectionStates">
+                               <VisualState x:Name="Selected">
                                     <Storyboard>
                                         <ColorAnimationUsingKeyFrames Storyboard.TargetName="Bd"
                                                 Storyboard.TargetProperty="(Panel.Background).
                     (SolidColorBrush.Color)"
                                                 >
                                             <EasingColorKeyFrame KeyTime="0"
-                                         Value="{StaticResource SelectedBackgroundColor}" />
+                                         Value="{StaticResource ActionBrushColor}" />
                                         </ColorAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
@@ -191,7 +177,7 @@
                                         </ColorAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
-                            </VisualStateGroup>
+                            </VisualStateGroup>-->
                             <VisualStateGroup x:Name="ExpansionStates">
                                 <VisualState x:Name="Expanded">
                                     <Storyboard>
@@ -205,84 +191,60 @@
                                 <VisualState x:Name="Collapsed" />
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-                        <ToggleButton x:Name="Expander"
-                        Style="{StaticResource ExpandCollapseToggleStyle}"
-                        ClickMode="Press"
-                        IsChecked="{Binding IsExpanded, 
-            RelativeSource={RelativeSource TemplatedParent}}"/>
-                        <Border x:Name="Bd"
-                  Grid.Column="1"
-                  Background="{TemplateBinding Background}"
-                  BorderBrush="{TemplateBinding BorderBrush}"
-                  BorderThickness="{TemplateBinding BorderThickness}"
-                  Padding="{TemplateBinding Padding}">
-                            <ContentPresenter x:Name="PART_Header"
-                              ContentSource="Header"
-                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
+                        <ToggleButton x:Name="Expander" Style="{StaticResource ExpandCollapseToggleStyle}" ClickMode="Press" IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}"/>
+                        <Image x:Name="Icon" Grid.Column="1" Source="{Binding Path=Icon, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" Width="12" Height="12"/>
+                        <Border x:Name="Bd" Grid.Column="2" Background="Transparent" BorderThickness="0" Padding="2,0,0,0">
+                            <ContentPresenter x:Name="PART_Header" ContentSource="Header" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
                         </Border>
-                        <ItemsPresenter x:Name="ItemsHost"
-                          Grid.Row="1"
-                          Grid.Column="1"
-                          Grid.ColumnSpan="2"
-                          Visibility="Collapsed" />
+                        <ItemsPresenter x:Name="ItemsHost" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Visibility="Collapsed" />
                     </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="HasItems"
-                   Value="false">
-                            <Setter TargetName="Expander"
-                    Property="Visibility"
-                    Value="Hidden" />
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsSelected" Value="True"/>        
+                                <Condition Property="HasItems" Value="False"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Background" Value="{StaticResource ActionColorBrush}" TargetName="Item"/>
+                        </MultiTrigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsSelected" Value="True"/>
+                                <Condition Property="HasItems" Value="True"/>
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Background" Value="{StaticResource ErrorFontColorBrush}" TargetName="Bd"/>
+                        </MultiTrigger>
+                        <Trigger Property="HasItems" Value="false">
+                            <Setter TargetName="Expander" Property="Visibility" Value="Hidden" />
                         </Trigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="HasHeader"
-                         Value="false" />
-                                <Condition Property="Width"
-                         Value="Auto" />
-                            </MultiTrigger.Conditions>
-                            <Setter TargetName="PART_Header"
-                    Property="MinWidth"
-                    Value="75" />
-                        </MultiTrigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="HasHeader"
-                         Value="false" />
-                                <Condition Property="Height"
-                         Value="Auto" />
-                            </MultiTrigger.Conditions>
-                            <Setter TargetName="PART_Header"
-                    Property="MinHeight"
-                    Value="19" />
-                        </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
     </Style>
 
-    <Style TargetType="{x:Type TreeView}">
-        <Setter Property="SnapsToDevicePixels" Value="true" />
-        <Setter Property="Foreground" Value="{StaticResource BasicFontColorBrush}"/>
-        <Setter Property="Background" Value="{StaticResource BackgroundColorBrush}"/>
+    <Style TargetType="{x:Type local:ExtendedTreeView}">
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="TreeView">
-                    <Border Name="Border"
-                CornerRadius="1"
-                BorderThickness="1">
-                        <Border.BorderBrush>
-                            <SolidColorBrush Color="{DynamicResource BorderMediumColor}" />
-                        </Border.BorderBrush>
-                        <Border.Background>
-                            <SolidColorBrush Color="{DynamicResource ControlLightColor}" />
-                        </Border.Background>
-                        <ScrollViewer Focusable="False"
-                        CanContentScroll="False"
-                        Padding="4">
-                            <ItemsPresenter />
-                        </ScrollViewer>
+                <ControlTemplate TargetType="{x:Type local:ExtendedTreeView}">
+                    <Border Name="Border" BorderThickness="1" BorderBrush="{StaticResource BorderColorBrush}">
+                        <DockPanel  Background="{StaticResource WorkplaceBackgroundBrush}">
+                            <StackPanel DockPanel.Dock="Top" Name="Title"  HorizontalAlignment="Stretch" Orientation="Horizontal" Margin="5,0" Background="{StaticResource ActionColorBrush}">
+                                <Button Name="RefreshSolutionButton" Style="{StaticResource MTitleBarButtonStyle}" Width="20" Height="20">
+                                    <Grid MaxHeight="9" MaxWidth="9">
+                                        <Path Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
+                                                    StrokeThickness="1.5" Stretch="None" Data="M0,0 L8,8 M0,8 L8,0" />
+                                    </Grid>
+                                </Button>
+                                <TextBlock FontSize="12" Foreground="{StaticResource BasicFontColorBrush}" Background="Transparent" Text="Solution Explorer" Margin="2,0,0,0"/>
+                            </StackPanel>
+                            <ScrollViewer Focusable="False" CanContentScroll="False" Padding="4">
+                                <ItemsPresenter />
+                            </ScrollViewer>
+                        </DockPanel>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
