--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -59,8 +59,8 @@
                                 <Separator/>
                                 <Button Style="{StaticResource MTitleBarButtonStyle}">
                                     <StackPanel Orientation="Horizontal">
-                                        <Path Width="15" Height="15" Stretch="Fill" Fill="{StaticResource SuccesColorBrush}" Data="F1 M 38,34.8333C 39.7489,34.8333 41.1667,36.2511 41.1667,38C 41.1667,39.7489 39.7489,41.1667 38,41.1667C 36.2511,41.1667 34.8333,39.7489 34.8333,38C 34.8333,36.2511 36.2511,34.8333 38,34.8333 Z M 39.0926,27.7941L 44.1899,23.4223C 45.1468,23.8291 46.0554,24.3274 46.9048,24.9062L 45.9892,31.5559L 52.685,32.0689C 53.068,33.0162 53.362,34.009 53.5566,35.037L 48.2059,39.0926L 52.5777,44.1899C 52.1709,45.1468 51.6726,46.0554 51.0938,46.9048L 44.4441,45.9892L 43.9311,52.685C 42.9838,53.068 41.9909,53.3619 40.963,53.5565L 36.9074,48.2059L 31.8101,52.5777C 30.8532,52.1709 29.9446,51.6726 29.0952,51.0938L 30.0108,44.4441L 23.315,43.931C 22.932,42.9837 22.638,41.9909 22.4434,40.963L 27.7941,36.9074L 23.4223,31.8101C 23.8291,30.8532 24.3274,29.9446 24.9062,29.0952L 31.5559,30.0108L 32.0689,23.315C 33.0162,22.932 34.0091,22.638 35.037,22.4434L 39.0926,27.7941 Z M 38,31.6667C 34.5022,31.6667 31.6667,34.5022 31.6667,38C 31.6667,41.4978 34.5022,44.3333 38,44.3333C 41.4978,44.3333 44.3333,41.4978 44.3333,38C 44.3333,34.5022 41.4978,31.6667 38,31.6667 Z "/>
-                                        <TextBlock Text="Compile" Style="{StaticResource BaseFont}" VerticalAlignment="Center" Margin="5,0,0,0"/>
+                                        <Path Width="10" Height="10" Stretch="Fill" Fill="{StaticResource SuccesColorBrush}" Data="F1 M 30.0833,22.1667L 50.6665,37.6043L 50.6665,38.7918L 30.0833,53.8333L 30.0833,22.1667 Z "/>
+                                        <TextBlock Text="Compile" Style="{StaticResource BaseFont}" VerticalAlignment="Center" Margin="5,0,0,0" FontSize="12"/>
                                     </StackPanel>
                                 </Button>
                                 <Separator/>
@@ -83,7 +83,10 @@
                                     <RowDefinition Height="1*" MaxHeight="150"/>
                                 </Grid.RowDefinitions>
                                 <local:ExtendedTabControl x:Name="WorkPlaceTabs" ItemsSource="{Binding}" ItemTemplate="{StaticResource HeaderTemplate}"
-                                                            ContentTemplate="{StaticResource ContentTemplate}"/>
+                                                            ContentTemplate="{StaticResource ContentTemplate}">
+                                    <local:ExtendedTabItem Header="Тестовая вкладка 1"/>
+                                    <local:ExtendedTabItem Header="Тестовая вкладка 2"/>
+                                    </local:ExtendedTabControl>
                                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
                             </Grid>
                             <Grid Grid.Column="4">
@@ -92,18 +95,18 @@
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="1*" MaxHeight="300"/>
                                 </Grid.RowDefinitions>
-                                <TreeView>
-                                    <TreeViewItem Header="Fruit">
-                                        <TreeViewItem Header="Lime"></TreeViewItem>
-                                        <TreeViewItem Header="Orange"></TreeViewItem>
-                                        <TreeViewItem Header="Apple"></TreeViewItem>
-                                    </TreeViewItem>
-                                    <TreeViewItem Header="Colors">
-                                        <TreeViewItem Header="Red"></TreeViewItem>
-                                        <TreeViewItem Header="Orange"></TreeViewItem>
-                                        <TreeViewItem Header="Green"></TreeViewItem>
-                                    </TreeViewItem>
-                                </TreeView>
+                                <local:ExtendedTreeView x:Name="SolutionTree">
+                                    <local:ExtendedTreeViewItem Header="Fruit">
+                                        <local:ExtendedTreeViewItem Header="Lime"></local:ExtendedTreeViewItem>
+                                        <local:ExtendedTreeViewItem Header="Orange"></local:ExtendedTreeViewItem>
+                                        <local:ExtendedTreeViewItem Header="Apple"></local:ExtendedTreeViewItem>
+                                    </local:ExtendedTreeViewItem>
+                                    <local:ExtendedTreeViewItem Header="Colors">
+                                        <local:ExtendedTreeViewItem Header="Red"></local:ExtendedTreeViewItem>
+                                        <local:ExtendedTreeViewItem Header="Orange"></local:ExtendedTreeViewItem>
+                                        <local:ExtendedTreeViewItem Header="Green"></local:ExtendedTreeViewItem>
+                                    </local:ExtendedTreeViewItem>
+                                </local:ExtendedTreeView>
 
                                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
                             </Grid>
