--- a/ModernControls/Themes/ExtendedTreeViewStyle.xaml
+++ b/ModernControls/Themes/ExtendedTreeViewStyle.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ModernControls"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/MTitleBarButtonStyle.xaml" />
@@ -78,16 +79,12 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <Style x:Key="ExpandCollapseToggleStyle"
-       TargetType="ToggleButton">
-        <Setter Property="Focusable"
-          Value="False" />
+    <Style x:Key="ExpandCollapseToggleStyle" TargetType="ToggleButton">
+        <Setter Property="Focusable" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ToggleButton">
-                    <Grid Width="15"
-              Height="13"
-              Background="Transparent">
+                    <Grid Width="15" Height="13" Background="Transparent">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CheckStates">
                                 <VisualState x:Name="Checked">
@@ -109,23 +106,19 @@
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         <Path x:Name="Collapsed"
+                              Fill="{StaticResource BasicFontColorBrush}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 Margin="1,1,1,1"
                 Data="M 4 0 L 8 4 L 4 8 Z">
-                            <Path.Fill>
-                                <SolidColorBrush Color="{DynamicResource GlyphColor}" />
-                            </Path.Fill>
                         </Path>
                         <Path x:Name="Expanded"
+                              Fill="{StaticResource BasicFontColorBrush}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 Margin="1,1,1,1"
                 Data="M 0 4 L 8 4 L 4 8 Z"
                 Visibility="Hidden">
-                            <Path.Fill>
-                                <SolidColorBrush Color="{DynamicResource GlyphColor}" />
-                            </Path.Fill>
                         </Path>
                     </Grid>
                 </ControlTemplate>
@@ -154,37 +147,11 @@
                             <RowDefinition />
                         </Grid.RowDefinitions>
                         <VisualStateManager.VisualStateGroups>
-                            <!--<VisualStateGroup x:Name="SelectionStates">
-                               <VisualState x:Name="Selected">
-                                    <Storyboard>
-                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Bd"
-                                                Storyboard.TargetProperty="(Panel.Background).
-                    (SolidColorBrush.Color)"
-                                                >
-                                            <EasingColorKeyFrame KeyTime="0"
-                                         Value="{StaticResource ActionBrushColor}" />
-                                        </ColorAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                                <VisualState x:Name="Unselected" />
-                                <VisualState x:Name="SelectedInactive">
-                                    <Storyboard>
-                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Bd"
-                                                Storyboard.TargetProperty="(Panel.Background).
-                    (SolidColorBrush.Color)">
-                                            <EasingColorKeyFrame KeyTime="0"
-                                         Value="{StaticResource SelectedUnfocusedColor}" />
-                                        </ColorAnimationUsingKeyFrames>
-                                    </Storyboard>
-                                </VisualState>
-                            </VisualStateGroup>-->
                             <VisualStateGroup x:Name="ExpansionStates">
                                 <VisualState x:Name="Expanded">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)"
-                                                 Storyboard.TargetName="ItemsHost">
-                                            <DiscreteObjectKeyFrame KeyTime="0"
-                                            Value="{x:Static Visibility.Visible}" />
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="ItemsHost">
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}" />
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
@@ -193,7 +160,7 @@
                         </VisualStateManager.VisualStateGroups>
                         <ToggleButton x:Name="Expander" Style="{StaticResource ExpandCollapseToggleStyle}" ClickMode="Press" IsChecked="{Binding IsExpanded, RelativeSource={RelativeSource TemplatedParent}}"/>
                         <Image x:Name="Icon" Grid.Column="1" Source="{Binding Path=Icon, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" Width="12" Height="12"/>
-                        <Border x:Name="Bd" Grid.Column="2" Background="Transparent" BorderThickness="0" Padding="2,0,0,0">
+                        <Border x:Name="Bd" Grid.Column="1" Grid.ColumnSpan="2" Background="Transparent" BorderThickness="0" Padding="2,0,0,0">
                             <ContentPresenter x:Name="PART_Header" ContentSource="Header" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
                         </Border>
                         <ItemsPresenter x:Name="ItemsHost" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Visibility="Collapsed" />
@@ -201,7 +168,7 @@
                     <ControlTemplate.Triggers>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
-                                <Condition Property="IsSelected" Value="True"/>        
+                                <Condition Property="IsFocused" Value="True" SourceName="PART_Header"/>        
                                 <Condition Property="HasItems" Value="False"/>
                             </MultiTrigger.Conditions>
                             <Setter Property="Background" Value="{StaticResource ActionColorBrush}" TargetName="Item"/>
@@ -222,27 +189,35 @@
         </Setter>
     </Style>
 
+    
+    <HierarchicalDataTemplate DataType="{x:Type internalClasses:SolutionTreeItem}"
+                            ItemsSource = "{Binding Path=Items}">
+        <local:ExtendedTreeViewItem Header="{Binding Path=Title}" Tag="{Binding Path=FilePath}"/>
+    </HierarchicalDataTemplate>
+
+    
+
+
     <Style TargetType="{x:Type local:ExtendedTreeView}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+        <Setter Property="ItemsSource" Value="{Binding}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ExtendedTreeView}">
                     <Border Name="Border" BorderThickness="1" BorderBrush="{StaticResource BorderColorBrush}">
-                        <DockPanel  Background="{StaticResource WorkplaceBackgroundBrush}">
-                            <StackPanel DockPanel.Dock="Top" Name="Title"  HorizontalAlignment="Stretch" Orientation="Horizontal" Margin="5,0" Background="{StaticResource ActionColorBrush}">
-                                <Button Name="RefreshSolutionButton" Style="{StaticResource MTitleBarButtonStyle}" Width="20" Height="20">
-                                    <Grid MaxHeight="9" MaxWidth="9">
-                                        <Path Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"
-                                                    StrokeThickness="1.5" Stretch="None" Data="M0,0 L8,8 M0,8 L8,0" />
-                                    </Grid>
+                        <DockPanel>
+                            <StackPanel DockPanel.Dock="Top" Name="Title"  HorizontalAlignment="Stretch" Orientation="Horizontal" Background="{StaticResource ActionColorBrush}">
+                                <Button Name="RefreshSolutionButton" Style="{StaticResource MTitleBarButtonStyle}" Width="25" Height="25">
+                                    <Path  Stretch="Fill" Fill="{StaticResource BasicFontColorBrush}" Width="18" Height="18"
+                                        StrokeThickness="0.5" Data="F1 M 38,20.5833C 42.9908,20.5833 47.4912,22.6825 50.6667,26.046L 50.6667,17.4167L 55.4166,22.1667L 55.4167,34.8333L 42.75,34.8333L 38,30.0833L 46.8512,30.0833C 44.6768,27.6539 41.517,26.125 38,26.125C 31.9785,26.125 27.0037,30.6068 26.2296,36.4167L 20.6543,36.4167C 21.4543,27.5397 28.9148,20.5833 38,20.5833 Z M 38,49.875C 44.0215,49.875 48.9963,45.3932 49.7703,39.5833L 55.3457,39.5833C 54.5457,48.4603 47.0852,55.4167 38,55.4167C 33.0092,55.4167 28.5088,53.3175 25.3333,49.954L 25.3333,58.5833L 20.5833,53.8333L 20.5833,41.1667L 33.25,41.1667L 38,45.9167L 29.1487,45.9167C 31.3231,48.3461 34.483,49.875 38,49.875 Z " />
                                 </Button>
-                                <TextBlock FontSize="12" Foreground="{StaticResource BasicFontColorBrush}" Background="Transparent" Text="Solution Explorer" Margin="2,0,0,0"/>
+                                <TextBlock FontSize="12" Foreground="{StaticResource BasicFontColorBrush}" Background="Transparent" Text="Solution Explorer" Margin="2,0,0,0" VerticalAlignment="Center"/>
                             </StackPanel>
-                            <ScrollViewer Focusable="False" CanContentScroll="False" Padding="4">
-                                <ItemsPresenter />
+                            <ScrollViewer Focusable="False" CanContentScroll="False" Padding="4" Background="{StaticResource WorkplaceBackgroundBrush}" Margin="0,4,0,0">
+                                <ItemsPresenter x:Name="ItemPresenter" />
                             </ScrollViewer>
                         </DockPanel>
                     </Border>
