--- a/ModernControls/Themes/ScrollBarStyle.xaml
+++ b/ModernControls/Themes/ScrollBarStyle.xaml
@@ -13,7 +13,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RepeatButton}">
-                    <Border x:Name="Border" Background="{StaticResource BackgroundColorBrush}" >
+                    <Border x:Name="Border" Background="{StaticResource SpltBackgroundBrush}" >
                         <Path x:Name="Arrow" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}" Fill="{StaticResource BasicFontColorBrush}" />
                     </Border>
                     <ControlTemplate.Triggers>
@@ -69,7 +69,7 @@
                 <RowDefinition Height="0.00001*" />
                 <RowDefinition MaxHeight="15" />
             </Grid.RowDefinitions>
-            <Border Grid.RowSpan="3" Background="{StaticResource BackgroundTitleColorBrush}" />
+            <Border Grid.RowSpan="3" Background="{StaticResource SpltBackgroundBrush}" />
             <RepeatButton Grid.Row="0" Style="{StaticResource ScrollBarLineButton}" Height="15" Command="ScrollBar.LineUpCommand" Content="M 0 4 L 8 4 L 4 0 Z" />
             <Track x:Name="PART_Track" Grid.Row="1" IsDirectionReversed="true">
                 <Track.DecreaseRepeatButton>
@@ -93,7 +93,7 @@
                 <ColumnDefinition Width="0.00001*" />
                 <ColumnDefinition MaxWidth="15" />
             </Grid.ColumnDefinitions>
-            <Border Grid.ColumnSpan="3" Background="{StaticResource BackgroundTitleColorBrush}" />
+            <Border Grid.ColumnSpan="3" Background="{StaticResource SpltBackgroundBrush}" />
             <RepeatButton Grid.Column="0" Style="{StaticResource ScrollBarLineButton}" Width="15" Command="ScrollBar.LineLeftCommand" Content="M 4 0 L 4 8 L 0 4 Z" />
             <Track x:Name="PART_Track" Grid.Column="1" IsDirectionReversed="False">
                 <Track.DecreaseRepeatButton>
