--- a/ModernControls/Themes/WorkplaceStyle.xaml
+++ b/ModernControls/Themes/WorkplaceStyle.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ModernControls"
-                    xmlns:internalClasses="clr-namespace:ModernControls.InternalClasses">
+                    xmlns:local="clr-namespace:ModernControls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/GridSplitterStyle.xaml"/>
@@ -83,11 +82,7 @@
                                     <RowDefinition Height="Auto"/>
                                     <RowDefinition Height="1*" MaxHeight="150"/>
                                 </Grid.RowDefinitions>
-                                <local:ExtendedTabControl x:Name="WorkPlaceTabs" ItemsSource="{Binding}" ItemTemplate="{StaticResource HeaderTemplate}"
-                                                            ContentTemplate="{StaticResource ContentTemplate}">
-                                    <local:ExtendedTabItem Header="Тестовая вкладка 1"/>
-                                    <local:ExtendedTabItem Header="Тестовая вкладка 2"/>
-                                    </local:ExtendedTabControl>
+                                <local:ExtendedTabControl x:Name="WorkPlaceTabs"/>
                                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
                             </Grid>
                             <Grid Grid.Column="4">
@@ -97,7 +92,6 @@
                                     <RowDefinition Height="1*" MaxHeight="300"/>
                                 </Grid.RowDefinitions>
                                 <local:ExtendedTreeView x:Name="SolutionTree"/>
-
                                 <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
                             </Grid>
                         </Grid>
