--- a/Q_Determinant/Resources.xaml
+++ b/Q_Determinant/Resources.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ModernControls;assembly=ModernControls">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/ModernControls;component/Themes/Generic.xaml"/>
     </ResourceDictionary.MergedDictionaries>
