--- a/ModernControls/Themes/ExtendedTreeViewStyle.xaml
+++ b/ModernControls/Themes/ExtendedTreeViewStyle.xaml
@@ -197,27 +197,30 @@
         <local:ExtendedTreeViewItem Header="{Binding Path=Title}" Tag="{Binding Path=FilePath}" x:Name="ItemTemplate" Type="{Binding Path=Type}"/>
     </HierarchicalDataTemplate>
 
-    
 
+    
 
     <Style TargetType="{x:Type local:ExtendedTreeView}">
         <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="ItemsSource" Value="{Binding}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ExtendedTreeView}">
-                    <Border Name="Border" BorderThickness="1" BorderBrush="{StaticResource BorderColorBrush}">
+                    <Border Name="Border">
                         <DockPanel>
-                            <StackPanel DockPanel.Dock="Top" Name="Title"  HorizontalAlignment="Stretch" Orientation="Horizontal" Background="{StaticResource ActionColorBrush}">
-                                <Button Name="RefreshSolutionButton" Style="{StaticResource MTitleBarButtonStyle}" Width="25" Height="25">
-                                    <Path  Stretch="Fill" Fill="{StaticResource BasicFontColorBrush}" Width="18" Height="18"
+                            <ToolBarTray DockPanel.Dock="Top">
+                                <ToolBar Band="0" BandIndex="0">
+                                    <Button Name="RefreshSolutionButton" Style="{StaticResource MTitleBarButtonStyle}" Width="25" Height="25">
+                                        <Path  Stretch="Fill" Fill="{StaticResource BasicFontColorBrush}" Width="18" Height="18"
                                         StrokeThickness="0.5" Data="F1 M 38,20.5833C 42.9908,20.5833 47.4912,22.6825 50.6667,26.046L 50.6667,17.4167L 55.4166,22.1667L 55.4167,34.8333L 42.75,34.8333L 38,30.0833L 46.8512,30.0833C 44.6768,27.6539 41.517,26.125 38,26.125C 31.9785,26.125 27.0037,30.6068 26.2296,36.4167L 20.6543,36.4167C 21.4543,27.5397 28.9148,20.5833 38,20.5833 Z M 38,49.875C 44.0215,49.875 48.9963,45.3932 49.7703,39.5833L 55.3457,39.5833C 54.5457,48.4603 47.0852,55.4167 38,55.4167C 33.0092,55.4167 28.5088,53.3175 25.3333,49.954L 25.3333,58.5833L 20.5833,53.8333L 20.5833,41.1667L 33.25,41.1667L 38,45.9167L 29.1487,45.9167C 31.3231,48.3461 34.483,49.875 38,49.875 Z " />
-                                </Button>
-                                <TextBlock FontSize="12" Foreground="{StaticResource BasicFontColorBrush}" Background="Transparent" Text="Solution Explorer" Margin="2,0,0,0" VerticalAlignment="Center" x:Name="TestField"/>
-                            </StackPanel>
+                                    </Button>
+                                    <Separator/>
+                                </ToolBar>
+                            </ToolBarTray>
                             <ScrollViewer Focusable="False" CanContentScroll="False" Padding="4" Background="{StaticResource WorkplaceBackgroundBrush}" Margin="0,4,0,0">
                                 <ItemsPresenter x:Name="ItemPresenter" />
                             </ScrollViewer>
