--- a/ModernControls/Themes/Generic.xaml
+++ b/ModernControls/Themes/Generic.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:ModernControls">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MWindowStyle.xaml" />
@@ -10,6 +9,9 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/WorkplaceStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTabControlStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTreeViewStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/BlockPanel.xaml" />
     </ResourceDictionary.MergedDictionaries>
+    
+
     
 </ResourceDictionary>
