--- a/ModernControls/Themes/Generic.xaml
+++ b/ModernControls/Themes/Generic.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -10,7 +10,10 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTabControlStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/ExtendedTreeViewStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/BlockPanel.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/DebugConsole.xaml" />
     </ResourceDictionary.MergedDictionaries>
+    
+
     
 
     
