--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -2,6 +2,6 @@
         xmlns:modernControls="clr-namespace:ModernControls;assembly=ModernControls"                        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024" >
+        WindowStartupLocation="CenterScreen" Title="Q-детерминант" MinHeight="768" MinWidth="1024" >
     <modernControls:Workplace  Margin="1"/>
 </modernControls:MWindow>
