--- a/ModernControls/Themes/ASideStyle.xaml
+++ b/ModernControls/Themes/ASideStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ModernControls">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/ModernControls;component/Themes/MColors.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/Colors.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <Style x:Key="{x:Type local:ASide}" TargetType="{x:Type local:ASide}">
         <Setter Property="Template">
